# playgolang

./: .gitignore
LearnCSharp/: LearnCSharp.sln
algs/: .gitignore
ds_play/: README.md  initds.py
golang_play/: README.md
golang_play/src/first/: calclator.go  hello.go
golang_play/src/hello/: hello.go
golang_play/src/main/: main.go
learncpp/algs/: CMakeLists.txt
learncpp/algs/1.leetcode/: 1_TwoSum.cpp  2_AddTwoNumbers.cpp  3_CloneGraph.cpp  4_Subsets.cpp  5_SortColors.cpp  6_TopKFrequentWords.cpp  7_Hanoi.cpp  CMakeLists.txt  Common.h  main.cpp
learncpp/algs/2.hackerrank/: CMakeLists.txt  main.cpp
learncpp/foundations/: CMakeLists.txt
learncpp/foundations/boost/: CMakeLists.txt
learncpp/foundations/boost/asio/: CMakeLists.txt  asio.cpp
learncpp/foundations/boost/timer/: CMakeLists.txt  timer.cpp
learncpp/foundations/boost/variant/: CMakeLists.txt  variant.cpp
learncpp/foundations/cpp/: CMakeLists.txt
learncpp/foundations/cpp/algo/: CMakeLists.txt  TestHeap.cpp
learncpp/foundations/cpp/cache/: CMakeLists.txt  cache.cpp
learncpp/foundations/cpp/courses/: APlusB.cpp  CMakeLists.txt
learncpp/foundations/cpp/hello/: CMakeLists.txt  (+11 more)
learncpp/foundations/poco/: CMakeLists.txt
learncs/HelloWorld/: Program.cs
learngo/: abc.txt  arrays.go  basic.go  controlflow.go  func.go  map.go  pointer.go
learnpy/: cpInfo.py  hello.py  test.py
pp_openmp/: CMakeLists.txt
pp_openmp/hello/: main.cpp
pp_openmp/log-of-arr/: CMakeLists.txt  main.cpp
pp_openmp/merging_sorted_lists/: CMakeLists.txt  main.cpp
socketpy/: udpClient.py  udpServer.py
(+8 files in other folders)
